fixed alignment for header title and close button (#4989)

--- a/src/components/PageReplacementModal/PageReplacementModal.scss
+++ b/src/components/PageReplacementModal/PageReplacementModal.scss
@@ -24,14 +24,18 @@
         width: 609px;
       }
     }
+    .header{
+      margin-bottom: 6px;
+    }
 
     .Button {
       height: 100%;
+      justify-content: right;
     }
 
     .page-replacement-divider {
       border-top: 1px solid var(--divider);
-      margin: 21px 0px 16px 0px;
+      margin: 18px 0px 16px 0px;
       width: 100%;
     }
 
